[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "county-mcp"
version = "0.1.1"
description = "Kenya 47 counties local government data via MCP — budgets, services, CDF, wards. 6 tools. Thesis L9."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9"]

[project.scripts]
county-mcp = "county_mcp.server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]
