[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "county-mcp"
version = "0.1.4"
description = "Kenya 47 counties local government data via MCP — budgets, services, CDF, wards. 6 tools. Thesis L9."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9"]

[project.scripts]
county-mcp = "county_mcp.server:mcp.run"

[project.urls]
Homepage = "https://github.com/gabrielmahia/county-mcp"
Documentation = "https://github.com/gabrielmahia/nairobi-stack"
"MCP Registry" = "https://registry.modelcontextprotocol.io"
Datasets = "https://huggingface.co/gmahia"
Evaluation = "https://github.com/gabrielmahia/kipimo"
[tool.setuptools.packages.find]
where = ["src"]
